# openai_sdk

./: readme.MD
agents/open_agent/: .env  pyproject.toml
agents/open_agent/src/open_agent/: __init__.py  all.py  app.py  dynamic_instruc.py  handsoff.py  life_sycle.py  main.py  structure_output.py
chainlit_hello/: pyproject.toml
chatbot/: main.py  pyproject.toml
hello_agent/: .env  pyproject.toml
helo_chain/: hello.py  pyproject.toml
streaming/: .env  hello.py
